cmake_minimum_required(VERSION 2.8)
project (GPU_ROOT)
 
set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
 
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
 
include_directories("${PROJECT_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}")
 
add_subdirectory(sheet01_task01_Transformations)
add_subdirectory(sheet01_task02_Material)
add_subdirectory(sheet01_task03_Texture)
add_subdirectory(sheet02_task04_Blending)
add_subdirectory(sheet02_task05_mirror)
add_subdirectory(sheet02_task06_VertexBufferObjects)
add_subdirectory(sheet03_task07_PumpingTeapot)
add_subdirectory(sheet03_task08_SSAA)
add_subdirectory(sheet03_task09_GlowingTeapot)
#add_subdirectory(sheet04_task10_UniformBufferObject)
#add_subdirectory(sheet04_task11_HairyBunny)
#add_subdirectory(sheet04_task12_HairyBunny2)
add_subdirectory(sheet05_task13_Tesselation)
add_subdirectory(sheet05_task14_Streaklines)
#add_subdirectory(sheet06_task16_Voxelization)
#add_subdirectory(sheet07_task17_Multiplikation_und_Addition)
#add_subdirectory(sheet07_task18_Swirl)
#add_subdirectory(sheet09_task_21_ClothSimulation)
#add_subdirectory(sheet10_task22_Tiefenunschärfe)
# add_subdirectory(sheet03_task08_SSAA)
# add_subdirectory(sheet03_task08_SSAA)
# add_subdirectory(sheet03_task08_SSAA)
# add_subdirectory(sheet03_task08_SSAA)
